ElementsImpl9#getFileObjectOf() should work for packages with packge-info also #782 (#801)
* Also Include PARAMETER and INTERFACE in the implementation

* To make it easier to run tests, some of them have been moved to compliance 17 from 9