@@ -454,6 +454,48 @@ public class Java9ElementsTests extends TestCase {
 		JavaCompiler compiler = BatchTestUtils.getEclipseCompiler();
 		internalTest3(compiler, MODULE_PROC, "testGetFileObjectOf", null, true);
 	}
+	public void testGetFileObjectOfRecordsJavac() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testGetFileObjectOfRecords", null, true);
+	}
+	public void testGetFileObjectOfRecords() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = BatchTestUtils.getEclipseCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testGetFileObjectOfRecords", null, true);
+	}
+	public void testElementsInTypeJavac() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testElementsInType", null, true);
+	}
+	public void testElementsInType() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = BatchTestUtils.getEclipseCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testElementsInType", null, true);
+	}
+	public void testDeeplyNestedTypesJavac() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testDeeplyNestedTypes", null, true);
+	}
+	public void testDeeplyNestedTypes() throws IOException {
+		if (!canRunJava20()) {
+			return;
+		}
+		JavaCompiler compiler = BatchTestUtils.getEclipseCompiler();
+		internalTest4(compiler, "20", MODULE_PROC, "testDeeplyNestedTypes", null, true);
+	}
 	protected void internalTestWithBinary(JavaCompiler compiler, String processor, String compliance, String testMethod, String testClass, String resourceArea) throws IOException {
 		if (!canRunJava9()) {
 			return;
@@ -567,7 +609,7 @@ public class Java9ElementsTests extends TestCase {
 		options.add("-A" + processor);
 		options.add("-A" + testMethod);
 		if (compiler instanceof EclipseCompiler) {
-			options.add("-9");
+			options.add("-17");
 		}
 		BatchTestUtils.compileInModuleMode(compiler, options, processor, srcRoot, null, true);
 		assertEquals("succeeded", System.getProperty(processor));
@@ -589,7 +631,33 @@ public class Java9ElementsTests extends TestCase {
 		options.add("-A" + processor);
 		options.add("-A" + testMethod);
 		if (compiler instanceof EclipseCompiler) {
-			options.add("-9");
+			options.add("-17");
+		}
+		BatchTestUtils.compileInModuleMode(compiler, options, processor, srcRoot, null, true, binaryMode);
+		assertEquals("succeeded", System.getProperty(processor));
+	}
+	/*
+	 * Tests are run in multi-module mode but only compiling a module path
+	 */
+	private void internalTest4(JavaCompiler compiler, String compliance, String processor, String testMethod, String testClass, boolean binaryMode) throws IOException {
+		if (!canRunJava9()) {
+			return;
+		}
+		System.clearProperty(processor);
+		File srcRoot = TestUtils.concatPath(BatchTestUtils.getSrcFolderName());
+		BatchTestUtils.copyResources("mod_locations/modules", srcRoot);
+
+		List<String> options = new ArrayList<String>();
+		options.add("-processor");
+		options.add(processor);
+		options.add("-A" + processor);
+		options.add("-A" + testMethod);
+		if (compiler instanceof EclipseCompiler) {
+			options.add("-" + compliance);
+		} else {
+			options.add("-source");
+			options.add(compliance);
+			options.add("--enable-preview");
 		}
 		BatchTestUtils.compileInModuleMode(compiler, options, processor, srcRoot, null, true, binaryMode);
 		assertEquals("succeeded", System.getProperty(processor));
@@ -605,6 +673,14 @@ public class Java9ElementsTests extends TestCase {
 	public boolean canRunJava18() {
 		try {
 			SourceVersion.valueOf("RELEASE_18");
+		} catch(IllegalArgumentException iae) {
+			return false;
+		}
+		return true;
+	}
+	public boolean canRunJava20() {
+		try {
+			SourceVersion.valueOf("RELEASE_20");
 		} catch(IllegalArgumentException iae) {
 			return false;
 		}
